cmake_minimum_required(VERSION 3.22)
project(leet_code)

set(CMAKE_CXX_STANDARD 17)

add_executable(leet_code main.cpp "greedy/Assign Cookies.cpp" stdc++.h "greedy/Remove Digit From Number to Maximize Result.cpp" "dfs/Deepest Leaves Sum.cpp" "bfs/Find if Path Exists in Graph.cpp" "binary_search/Find Positive Integer Solution for a Given Equation.cpp" "binary_search/Capacity To Ship Packages Within D Days.cpp" "binary_tree/Sum of Nodes with Even-Valued Grandparent.cpp" "binary_tree/Contest 298.cpp" "two_pointers/Long Pressed Name.cpp" "two_pointers/Partition Array According to Given Pivot.cpp" "two_pointers/ Maximum Twin Sum of a Linked List.cpp" "binary_search_tree/Construct Binary Search Tree from Preorder Traversal.cpp" "heap/Top K Frequent Elements.cpp")
